// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExplorerSync.vue Should display no subscription status 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="error--text">Synchronization will become available once a subscription has been started.</b></div> <button type="button" disabled="disabled" class="mt-2 v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default"><span class="v-btn__content">Start Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should display that sync is active 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="success--text">Your explorer is synchronizing blocks.</b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Stop Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should display that sync is inactive 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="error--text">
        Your explorer is not synchronizing blocks.
        <!---->.
      </b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Start Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should display that sync is starting 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="warning--text">Starting synchronization...</b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Start Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should display that sync is stopping 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="warning--text">Stopping synchronization...</b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Start Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should display unknown status 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="error--text">Unknown synchronization status (unknown).</b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Start Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should display unreachable status 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="error--text">
        Your explorer is not synchronizing blocks.<span> RPC is unreachable</span>.
      </b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Start Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should start sync 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="success--text">Your explorer is synchronizing blocks.</b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Stop Sync</span></button>
  </div>
</div>
`;

exports[`ExplorerSync.vue Should stop sync 1`] = `
<div class="flex-grow-1 v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text">
    <!---->
    <div><b class="error--text">
        Your explorer is not synchronizing blocks.
        <!---->.
      </b></div> <button type="button" class="mt-2 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"><span class="v-btn__content">Start Sync</span></button>
  </div>
</div>
`;
